# Netamata

./: LICENSE  README.md  pyproject.toml
netamata/: __init__.py  main.py
